update .gitignore and readme

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,5 @@ results_analysis/ERP_figs/
 results_analysis/multimodalfigs/
 results_analysis/unimodalfigs/
 unused/
-models/MSAA.m
-models/MSAA_T.m
-models/PCHA.m
+models/Other_models/
 utility/DTU_cluster_setup.m
